--- a/css/main.css
+++ b/css/main.css
@@ -142,6 +142,11 @@ pre {
   .icon > svg path {
     fill: #828282; }
 
+#github {
+  position: absolute;
+  right: 0;
+  z-index: 1; }
+
 /**
  * Site header
  */
