--- a/app/templates/components/dialog.hbs
+++ b/app/templates/components/dialog.hbs
@@ -1,4 +1,4 @@
-<div {{bind-attr class=":dialog-dialog :component-dialog-dialog className substrate"}}>
+<div class="dialog-dialog component-dialog-dialog {{className}} {{substrate}}">
     <div class="dialog-content" tabindex="-1">
         {{view body}}
     </div>
